--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -154,7 +154,7 @@
   }
   .project-section {
     margin-bottom: 10px;
-    height: 100%;
+    min-height: auto;
   }
 }
 
@@ -181,7 +181,7 @@
   }
   .project-section {
     margin-bottom: 10px;
-    height: 100%;
+    min-height: auto;
   }
 }
 
@@ -207,6 +207,6 @@
   }
   .project-section {
     margin-bottom: 10px;
-    height: 100%;
+    min-height: auto;
   }
 }
