--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -76,7 +76,7 @@
   .skills-section {
     margin-top: 10px;
     margin-bottom: 10px;
-    height: 100%;
+    min-height: auto;
     padding: 0;
   }
 }
@@ -89,7 +89,7 @@
   .skills-section {
     margin-top: 10px;
     margin-bottom: 10px;
-    height: 100%;
+    min-height: auto;
     padding: 0;
   }
 }
