--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -159,7 +159,7 @@
 
   .project-section {
     margin-bottom: 10px;
-    height: auto; /* Change to auto */
+    min-height: auto;
   }
 }
 
@@ -192,7 +192,7 @@
 
   .project-section {
     margin-bottom: 10px;
-    height: auto; /* Change to auto */
+    min-height: auto;
   }
 }
 
@@ -224,6 +224,7 @@
 
   .project-section {
     margin-bottom: 10px;
-    height: auto; /* Change to auto */
+    padding-bottom: 0;
+    min-height: auto;
   }
 }
