--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -3,11 +3,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start; /* Changed to flex-start */
-  min-height: auto; /* Change min-height to auto */
+  justify-content: flex-start;
+  height: auto;
   color: white;
   padding: 0;
-  margin-top: 0; /* Ensure no extra margin */
+  margin-top: 0;
 }
 
 .contact-heading {
@@ -39,7 +39,7 @@
   padding: 15px;
   font-size: 16px;
   border-radius: 5px;
-  border: 1px solid #4f6373; /* Ensure border style */
+  border: 1px solid #4f6373;
   background-color: #29323a;
   color: #e0e0e0;
   outline: none;
@@ -62,7 +62,7 @@
   font-size: 18px;
   background-color: #00ffff;
   color: #000;
-  border: 1px solid #4f6373; /* Ensure border style */
+  border: 1px solid #4f6373;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.3s ease;
@@ -83,22 +83,22 @@
   color: #00ff00;
 }
 
-/* Responsive adjustments */
 @media (max-width: 768px) {
   .contact-container {
-    padding-bottom: 10px; /* Adjust padding for mobile */
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 
   .contact-heading {
-    font-size: 28px; /* Adjust font size for smaller screens */
+    font-size: 28px;
   }
 
   .form-input,
   .form-textarea {
-    font-size: 14px; /* Adjust input font size */
+    font-size: 14px;
   }
 
   .form-button {
-    font-size: 16px; /* Adjust button font size */
+    font-size: 16px;
   }
 }
